--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==24.10.0
 click==8.1.7
 colorama==0.4.6
 crispy-bootstrap4==2024.10
+dj-database-url==2.3.0
 Django==5.1.2
 django-crispy-forms==2.3
 mypy-extensions==1.0.0
@@ -10,5 +11,6 @@ packaging==24.1
 pathspec==0.12.1
 platformdirs==4.3.6
 sqlparse==0.5.1
+typing_extensions==4.12.2
 tzdata==2024.2
 whitenoise==6.8.2
